# chinese-history-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-registry.yml
docs/: MCP_DEMO.md
scripts/: mcp_demo.py
src/storyextractor/: __init__.py  db.py  model.py
src/storyextractor/mcp/: __init__.py  __main__.py  db.py  queries.py  server.py
tests/: test_mcp_server.py
