[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-history-mcp"
version = "0.1.0"
description = "A traceable Chinese-history MCP server: 4 tools over 9 classical texts, every result cited (book→chapter→paragraph). Zero runtime dependencies."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "chinese-history", "classical-chinese", "sinology", "rag", "provenance"]
dependencies = []   # runtime is Python standard library only

[project.scripts]
chinese-history-mcp = "storyextractor.mcp.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
